Feat: 생성 두 번째, 세 번째 페이지
--aboutme.html
로렘 입숨을 활용하여 간단한 텍스트 페이지 구현
--photo.html
사진 파일과 그 옆에 텍스트 파일 배치

--- a/aboutme/src/main/webapp/index.html
+++ b/aboutme/src/main/webapp/index.html
@@ -15,14 +15,14 @@
 		</ul>
 	</header>
 	<hr>
-	<div class="main">
+	<div class="index_main">
 		<h1>웹 프론트개발자 조성훈</h1>
 		<p>함께 개발하고 같이 성장하고 싶어요.<br>경기도 수원시 장안구 조원동</p>
 		<div class="button link">
 			<span>자기소개</span>
 			<span>내사진</span>
 		</div>
-		<div class="image"><img src="./지도.PNG" alt="지도"></div>
+		<img src="./지도.PNG" alt="지도" class="index_image">
 	</div>
 	<hr>
 	<footer>
