--- a/aboutme/src/main/webapp/aboutme.html
+++ b/aboutme/src/main/webapp/aboutme.html
@@ -8,10 +8,10 @@
 <body>
 	<header>
 		<ul class="menu" style='margin-bottom:5px'>
-			<li>홈</li>
-			<li>자기소개</li>
-			<li>내사진</li>
-			<li>몇시에요</li>			
+			<li><a href="../aboutme/index.html">홈</a></li>
+			<li><a href="../aboutme/aboutme.html">자기소개</a></li>
+			<li><a href="../aboutme/photo.html">내사진</a></li>
+			<li><a href="../aboutme/today">몇시에요</a></li>			
 		</ul>
 	</header>
 	<hr>
