--- a/aboutme/src/main/webapp/index.html
+++ b/aboutme/src/main/webapp/index.html
@@ -8,10 +8,10 @@
 <body>
 	<header>
 		<ul class="menu" style='margin-bottom:5px'>
-			<li>홈</li>
-			<li>자기소개</li>
-			<li>내사진</li>
-			<li>몇시에요</li>			
+			<li><a href="../aboutme/index.html">홈</a></li>
+			<li><a href="../aboutme/aboutme.html">자기소개</a></li>
+			<li><a href="../aboutme/photo.html">내사진</a></li>
+			<li><a href="../aboutme/today">몇시에요</a></li>			
 		</ul>
 	</header>
 	<hr>
@@ -19,8 +19,8 @@
 		<h1>웹 프론트개발자 조성훈</h1>
 		<p>함께 개발하고 같이 성장하고 싶어요.<br>경기도 수원시 장안구 조원동</p>
 		<div class="button link">
-			<span>자기소개</span>
-			<span>내사진</span>
+			<span><a href="../aboutme/aboutme.html">자기소개</a></span>
+			<span><a href="../aboutme/photo.html">내사진</a></span>
 		</div>
 		<img src="./지도.PNG" alt="지도" class="index_image">
 	</div>
