Design: 변경 내사진 페이지 글간격
float, clear 속성 적용
태그 일부 추가(aside, section 등)

--- a/aboutme/src/main/webapp/photo.html
+++ b/aboutme/src/main/webapp/photo.html
@@ -15,20 +15,32 @@
 		</ul>
 	</header>
 	<hr>
-	<div class="photo_main">
-		<img src="./alanwalker.jpg" alt="Alan Walker" class="photo_image">
-		<span class="photo_text">Photo by <a href="https://unsplash.com/@onthesearchforpineapples?utm_source=unsp
-		lash&utm_medium=referral&utm_content=creditCopyText">Colin Lloyd</a> on <a href="https:
-		//unsplash.com/s/photos/alan-walker?utm_source=unsplash&utm_medium=referral&utm_content
-		=creditCopyText">Unsplash</a></span>
-		<hr>
-		<img src="./festival.jpg" alt="UMF" class="photo_image">
-		<span class="photo_text">Photo by <a href="https://unsplash.com/@hannynaibaho?utm_source=unsplash&utm_medi
-		um=referral&utm_content=creditCopyText">Hanny Naibaho</a> on <a href="https://unsplash.
-		com/s/photos/festival?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyTex
-		t">Unsplash</a></span>
-	</div>
-	<hr>
+		<div class="photo_main">
+			<aside>
+				<img src="./alanwalker.jpg" alt="Alan Walker" class="photo_image">
+			</aside>
+			<section class="photo_section">
+				<article class="photo_article">Photo by <a href="https://unsplash.com/@onthesearchforpineapples?utm_source=unsp
+				lash&utm_medium=referral&utm_content=creditCopyText">Colin Lloyd</a> on <a href="https:
+				//unsplash.com/s/photos/alan-walker?utm_source=unsplash&utm_medium=referral&utm_content
+				=creditCopyText">Unsplash</a></article>
+				<article class="photo_article">Lorem ipsum dolor sit amet.</article>
+			</section>
+		</div>
+		<hr class="photo_clear">
+		<div class="photo_main">
+			<aside>
+				<img src="./festival.jpg" alt="UMF" class="photo_image">
+			</aside>
+			<section class="photo_section">
+				<article class="photo_article">Photo by <a href="https://unsplash.com/@hannynaibaho?utm_source=unsplash&utm_medi
+				um=referral&utm_content=creditCopyText">Hanny Naibaho</a> on <a href="https://unsplash.
+				com/s/photos/festival?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyTex
+				t">Unsplash</a></article>
+				<article class="photo_article">Lorem ipsum dolor sit amet.</article>
+			</section>
+		</div>
+	<hr class="photo_clear">
 	<footer>
 		<address>
 			네이버 부스트코스 닉네임 : 1년안에취업가자<br>
