Comment: 추가 css 주석
style.css 주석 추가
html 내부 class 명 변경

--- a/aboutme/src/main/webapp/aboutme.html
+++ b/aboutme/src/main/webapp/aboutme.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<header>
-		<ul class="menu" style='margin-bottom:5px'>
+	<header class="global_header">
+		<ul class="global_menu" style='margin-bottom:5px'>
 			<li><a href="../aboutme/index.html">홈</a></li>
 			<li><a href="../aboutme/aboutme.html">자기소개</a></li>
 			<li><a href="../aboutme/photo.html">내사진</a></li>
