--- a/aboutme/src/main/webapp/index.html
+++ b/aboutme/src/main/webapp/index.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<header>
-		<ul class="menu" style='margin-bottom:5px'>
+	<header class="global_header">
+		<ul class="global_menu" style='margin-bottom:5px'>
 			<li><a href="../aboutme/index.html">홈</a></li>
 			<li><a href="../aboutme/aboutme.html">자기소개</a></li>
 			<li><a href="../aboutme/photo.html">내사진</a></li>
@@ -17,10 +17,10 @@
 	<hr>
 	<div class="index_main">
 		<h1>웹 프론트개발자 조성훈</h1>
-		<p>함께 개발하고 같이 성장하고 싶어요.<br>경기도 수원시 장안구 조원동</p>
-		<div class="button link">
-			<span><a href="../aboutme/aboutme.html">자기소개</a></span>
-			<span><a href="../aboutme/photo.html">내사진</a></span>
+		<p class="index_text">함께 개발하고 같이 성장하고 싶어요.<br>경기도 수원시 장안구 조원동</p>
+		<div>
+			<span class="index_button"><a href="../aboutme/aboutme.html">자기소개</a></span>
+			<span class="index_button"><a href="../aboutme/photo.html">내사진</a></span>
 		</div>
 		<img src="./지도.PNG" alt="지도" class="index_image">
 	</div>
